RESOLVED FIXED83141
combine two arrays (coreExceptionName and coreExceptionDescription) into one array
https://bugs.webkit.org/show_bug.cgi?id=83141
Summary combine two arrays (coreExceptionName and coreExceptionDescription) into one ...
Lu Guanqun
Reported 2012-04-04 03:59:24 PDT
This is a FIXME item in this file: Source/WebCore/dom/DOMCoreException.cpp Using one array makes it consistent and remove one COMPILE_ASSERT() in this file.
Attachments
Patch (7.53 KB, patch)
2012-04-04 04:06 PDT, Lu Guanqun
no flags
Patch (7.53 KB, patch)
2012-04-04 04:26 PDT, Lu Guanqun
no flags
Lu Guanqun
Comment 1 2012-04-04 04:06:18 PDT
Lu Guanqun
Comment 2 2012-04-04 04:26:36 PDT
Alexey Proskuryakov
Comment 3 2012-04-04 10:01:44 PDT
Did you mean to mark the latest patch obsolete? Looks fine otherwise.
Lu Guanqun
Comment 4 2012-04-04 17:40:12 PDT
(In reply to comment #3) > Did you mean to mark the latest patch obsolete? Looks fine otherwise. Oops, it must be checked by accident... I've removed the "obsolete" flags, please review. Thanks!
Adam Barth
Comment 5 2012-04-05 21:36:56 PDT
Comment on attachment 135555 [details] Patch Great! Thanks. There are a bunch of similar structs we could improve in this way.
WebKit Review Bot
Comment 6 2012-04-05 21:58:01 PDT
Comment on attachment 135555 [details] Patch Clearing flags on attachment: 135555 Committed r113413: <http://trac.webkit.org/changeset/113413>
WebKit Review Bot
Comment 7 2012-04-05 21:58:06 PDT
All reviewed patches have been landed. Closing bug.
Lu Guanqun
Comment 8 2012-04-09 21:38:16 PDT
(In reply to comment #5) > (From update of attachment 135555 [details]) > Great! Thanks. There are a bunch of similar structs we could improve in this way. I've spotted these places and created a master bug here: https://bugs.webkit.org/show_bug.cgi?id=83441 And all patches have been submitted for review. Thanks!
Note You need to log in before you can comment on or make changes to this bug.