combine two arrays (coreExceptionNames and coreExceptionDescriptions) into one array https://bugs.webkit.org/show_bug.cgi?id=83141

Patch by Lu Guanqun <guanqun.lu@intel.com> on 2012-04-05
Reviewed by Adam Barth.

No new tests required.

* dom/DOMCoreException.cpp:
(CoreException):
(WebCore):
(WebCore::DOMCoreException::initializeDescription):

Canonical link: https://commits.webkit.org/100743@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113413 268f45cc-cd09-0410-ab3c-d52691b4dbfc